@@ -1,0 +1,12 @@
+body common control
+{
+      bundlesequence => { run };
+}
+
+bundle common run
+{
+  classes:
+      "test_class"
+        expression => "any",
+        persistence => "120"; # 2 hours.
+}
